--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Raytracer VERSION 1.0 LANGUAGES C)
 
 add_executable(Raytracer
     src/main.c
+    src/hit_list.c
 )
+
+target_link_libraries(Raytracer m)
