Adding command line argument support. Now using glm as math library. Fixed a bug where Boxes where only rendered in (0, 0, 0)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ add_executable(Raytracer
 )
 
 target_include_directories(Raytracer PRIVATE ./include)
+
+target_include_directories(Raytracer PRIVATE extern/glm)
+target_include_directories(Raytracer PRIVATE extern/stb)
